Prevent horizontal scrolling in layout

--- a/nextjs-app/styles/globals.css
+++ b/nextjs-app/styles/globals.css
@@ -35,6 +35,5 @@ img {
 .app-wrapper {
   top: 0;
   min-height: 100vh;
-  width: 100vw;
   display: flex;
 }
